--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/OverviewTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/OverviewTableComponent.razor
@@ -16,14 +16,14 @@
     {
         <tr>
             <th>@overview.LocationName</th>
-            <th class="@overview.CssBackgroundClass.AvgTemp">@overview.AvgTemp°C</th>
-            <th class="@overview.CssBackgroundClass.MaxTemp">@overview.MaxTemp°C</th>
+            <th class="@overview.CssClass.AvgTemp">@overview.AvgTemp°C</th>
+            <th class="@overview.CssClass.MaxTemp">@overview.MaxTemp°C</th>
             <th>@overview.DateOfMaxTemp</th>
 
-            <th class="@overview.CssBackgroundClass.MinTemp">@overview.MinTemp°C</th>
+            <th class="@overview.CssClass.MinTemp">@overview.MinTemp°C</th>
             <th>@overview.DateOfMinTemp</th>
 
-            <th class="@overview.CssBackgroundClass.SunHour">@overview.SunHour h</th>
+            <th class="@overview.CssClass.SunHour">@overview.SunHour h</th>
         </tr>
     }
     </tbody>
