--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/DayTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/DayTableComponent.razor
@@ -14,10 +14,10 @@
     {
         <tr>
             <td>@day.Date</td>
-            <td class="@day.CssBackgroundClass.AvgTemp">@day.AvgTemp°C</td>
-            <td class="@day.CssBackgroundClass.MinTemp">@day.MinTemp°C</td>
-            <td class="@day.CssBackgroundClass.MaxTemp">@day.MaxTemp°C</td>
-            <td class="@day.CssBackgroundClass.SunHour">@day.SunHour h</td>
+            <td class="@day.CssClass.AvgTemp">@day.AvgTemp°C</td>
+            <td class="@day.CssClass.MinTemp">@day.MinTemp°C</td>
+            <td class="@day.CssClass.MaxTemp">@day.MaxTemp°C</td>
+            <td class="@day.CssClass.SunHour">@day.SunHour h</td>
         </tr>
     }
     </tbody>
