--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/YearsTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/YearsTableComponent.razor
@@ -16,12 +16,12 @@
     {
         <tr>
             <th>@year.Year</th>
-            <th class="@year.CssBackgroundClass.AvgTemp">@year.AvgTemp°C</th>
-            <td class="@year.CssBackgroundClass.MaxTemp">@year.MaxTemp°C</td>
+            <th class="@year.CssClass.AvgTemp">@year.AvgTemp°C</th>
+            <td class="@year.CssClass.MaxTemp">@year.MaxTemp°C</td>
             <td>@year.DateOfMaxTemp</td>
-            <td class="@year.CssBackgroundClass.MinTemp">@year.MinTemp°C</td>
+            <td class="@year.CssClass.MinTemp">@year.MinTemp°C</td>
             <td>@year.DateOfMinTemp</td>
-            <td class="@year.CssBackgroundClass.SunHour">@year.SunHour h</td>
+            <td class="@year.CssClass.SunHour">@year.SunHour h</td>
         </tr>
     }
     </tbody>
