--- a/WeatherHistoryViewer.Web/Client/Pages/WeatherOfDay.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/WeatherOfDay.razor
@@ -1,9 +1,7 @@
 ﻿@page "/weatherOfDay"
-@using WeatherHistoryViewer.Services.Helpers
 @using WeatherHistoryViewer.Core.Models
 @using WeatherHistoryViewer.Core.Models.Weather
 @using WeatherHistoryViewer.Core.ViewModels
-@using WeatherHistoryViewer.Web.Client.Shared.WeatherTables.WeatherOf
 @using WeatherHistoryViewer.Core.Constants
 @inject HttpClient Http
 
@@ -21,8 +19,8 @@ else
             Currently loaded data for date @_weatherData.Date.ToString("MM/dd") in @_weatherOfDay.First().Location.Name
         </p>
         <EditForm Model="@_weatherData" OnValidSubmit="@HandleValidSubmit">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
+            <DataAnnotationsValidator/>
+            <ValidationSummary/>
             <label>
                 <span>Location <span class="required">*</span></span>
                 <select @bind="@_weatherData.Location" class="input-field">
@@ -37,7 +35,7 @@ else
             </label>
 
             <label>
-                <span> </span><input type="submit" value="Load" />
+                <span> </span><input type="submit" value="Load"/>
             </label>
         </EditForm>
     </div>
