--- a/WeatherHistoryViewer.Web/Client/Pages/WeatherOfWeek.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/WeatherOfWeek.razor
@@ -1,5 +1,4 @@
 ﻿@page "/weatherOfWeek"
-@using WeatherHistoryViewer.Services.Helpers
 @using WeatherHistoryViewer.Core.Models
 @using WeatherHistoryViewer.Core.Models.Weather
 @using WeatherHistoryViewer.Core.ViewModels
@@ -21,8 +20,8 @@ else
             Currently loaded data for date @_weatherData.Date.ToString("MM/dd") in @_weatherOfWeek.First().First().Location.Name
         </p>
         <EditForm Model="@_weatherData" OnValidSubmit="@HandleValidSubmit">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
+            <DataAnnotationsValidator/>
+            <ValidationSummary/>
             <label>
                 <span>Location <span class="required">*</span></span>
                 <select @bind="@_weatherData.Location" class="input-field">
@@ -37,7 +36,7 @@ else
             </label>
 
             <label>
-                <span> </span><input type="submit" value="Load" />
+                <span> </span><input type="submit" value="Load"/>
             </label>
         </EditForm>
     </div>
@@ -62,7 +61,7 @@ else
 
         _locationNames = await Http.GetFromJsonAsync<List<string>>("/api/location/getLocationNames");
         _weatherData.Location = WeatherConstants.DefaultLocationName;
-        
+
         var weatherOfWeekViewModel = await Http.GetFromJsonAsync<WeatherOfWeekViewModel>($"/api/weatherOf/week?location={_weatherData.Location}&date={_weatherData.DateString}");
         if (weatherOfWeekViewModel != null)
         {
