--- a/WeatherHistoryViewer.Web/Client/Pages/WeatherOfDay.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/WeatherOfDay.razor
@@ -3,6 +3,7 @@
 @using WeatherHistoryViewer.Core.Models.Weather
 @using WeatherHistoryViewer.Core.ViewModels
 @using WeatherHistoryViewer.Core.Constants
+@using WeatherHistoryViewer.Web.Client.Shared.WeatherTables.WeatherOf
 @inject HttpClient Http
 
 @if (_weatherOfDay == null)
@@ -19,8 +20,8 @@ else
             Currently loaded data for date @_weatherData.Date.ToString("MM/dd") in @_weatherOfDay.First().Location.Name
         </p>
         <EditForm Model="@_weatherData" OnValidSubmit="@HandleValidSubmit">
-            <DataAnnotationsValidator/>
-            <ValidationSummary/>
+            <DataAnnotationsValidator />
+            <ValidationSummary />
             <label>
                 <span>Location <span class="required">*</span></span>
                 <select @bind="@_weatherData.Location" class="input-field">
@@ -35,7 +36,7 @@ else
             </label>
 
             <label>
-                <span> </span><input type="submit" value="Load"/>
+                <span> </span><input type="submit" value="Load" />
             </label>
         </EditForm>
     </div>
