--- a/WeatherHistoryViewer.Web/Client/Pages/Index.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using WeatherHistoryViewer.Core.Models
 @using WeatherHistoryViewer.Core.ViewModels
+@using WeatherHistoryViewer.Web.Client.Shared.WeatherTables
 @inject HttpClient Http
 
 @if (_weatherOverviews == null)
