--- a/WeatherHistoryViewer.Web/Client/Pages/WeatherPerYear.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/WeatherPerYear.razor
@@ -3,6 +3,8 @@
 @using WeatherHistoryViewer.Core.ViewModels
 @using WeatherHistoryViewer.Core.Constants
 @using WeatherHistoryViewer.Web.Client.Shared.WeatherTables.WeatherOf
+@using System.Collections.Generic
+@using System.Threading.Tasks
 @inject HttpClient Http
 
 @if (_weatherOfYears == null)
